[gd_scene load_steps=22 format=3 uid="uid://wch7ppkoxe6y"]

[ext_resource type="Script" path="res://Scripts/Enemy/Ranger.gd" id="1_24xf5"]
[ext_resource type="Texture2D" uid="uid://b7xqte7umcef" path="res://Assets/Kenney_Tiny_Dungeon/Tiles/tile_0112.png" id="2_l60by"]
[ext_resource type="Script" path="res://Scripts/Weapons/Weapons.gd" id="3_bg0sv"]
[ext_resource type="PackedScene" uid="uid://baott8g1rnrl7" path="res://Scenes/Weapons/enemy_bow.tscn" id="4_sxpwh"]
[ext_resource type="Script" path="res://Scripts/States/StateGroup.gd" id="5_m7ioo"]
[ext_resource type="Script" path="res://Scripts/States/StateIdle.gd" id="5_swb52"]
[ext_resource type="Script" path="res://Scripts/States/StateStaggered.gd" id="6_8d1eq"]
[ext_resource type="Script" path="res://Scripts/States/StateWeaponAttack.gd" id="8_db66e"]
[ext_resource type="Script" path="res://Scripts/States/StateMoving.gd" id="9_d4eih"]
[ext_resource type="Script" path="res://Scripts/AI_States/AI_Wandering.gd" id="12_dm4xn"]
[ext_resource type="Script" path="res://Scripts/Events/EventTakeKnockback.gd" id="12_i1y8r"]
[ext_resource type="Script" path="res://Scripts/Events/EventTakeDamage.gd" id="13_6wpwa"]
[ext_resource type="Script" path="res://Scripts/AI_States/AI_Approach.gd" id="13_iwtvt"]
[ext_resource type="Script" path="res://Scripts/AI_States/AI_AttackingAtAngle.gd" id="14_8kb0d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2631f"]
radius = 11.0

[sub_resource type="Animation" id="Animation_0na2m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapons/enemy_bow_root:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapons/enemy_bow_root/weapon_offset:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_s1yo0"]
resource_name = "attack_single_1"
length = 0.5
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapons/enemy_bow_root/weapon_offset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.36, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 4), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.36),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.36),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["bow_release"],
"method": &"play_sound"
}]
}

[sub_resource type="Animation" id="Animation_n4tr0"]
resource_name = "idle"
length = 0.75
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapons/enemy_bow_root:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_oec8n"]
resource_name = "moving"
length = 0.5
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapons/enemy_bow_root:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.261799, -0.261799, 0.261799]
}

[sub_resource type="Animation" id="Animation_vp3k3"]
resource_name = "staggered"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.57079, 3.14159, 4.71238, 6.28318]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["enemy_hurt"],
"method": &"play_sound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x4k0j"]
_data = {
"RESET": SubResource("Animation_0na2m"),
"attack_single_1": SubResource("Animation_s1yo0"),
"idle": SubResource("Animation_n4tr0"),
"moving": SubResource("Animation_oec8n"),
"staggered": SubResource("Animation_vp3k3")
}

[node name="Ranger" type="CharacterBody2D" node_paths=PackedStringArray("state_groups", "anim_player", "attack_audio_player", "weapons", "current_state")]
collision_layer = 2
script = ExtResource("1_24xf5")
approach_distance_min = 75
approach_distance_max = 600
state_groups = [NodePath("States")]
base_movement_speed = 0.5
anim_player = NodePath("AnimationPlayer")
attack_audio_player = NodePath("AudioStreamPlayer2D")
weapons = NodePath("Weapons")
hitbox_layer = 2
hurtbox_mask = 3
current_state = NodePath("States/idle")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2631f")

[node name="sprite_offset" type="Node2D" parent="CollisionShape2D"]
position = Vector2(0, -1)

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D/sprite_offset"]
texture_filter = 1
texture_repeat = 1
texture = ExtResource("2_l60by")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x4k0j")
}

[node name="Weapons" type="Node2D" parent="." node_paths=PackedStringArray("actor", "current_weapon", "weapons")]
script = ExtResource("3_bg0sv")
actor = NodePath("..")
current_weapon = NodePath("enemy_bow_root")
weapons = [NodePath("enemy_bow_root")]

[node name="enemy_bow_root" parent="Weapons" instance=ExtResource("4_sxpwh")]

[node name="States" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("5_m7ioo")
current_state = NodePath("idle")

[node name="idle" type="Node" parent="States"]
script = ExtResource("5_swb52")

[node name="staggered" type="Node" parent="States"]
script = ExtResource("6_8d1eq")
state_time_max = 0.5

[node name="StateMoving" type="Node" parent="States"]
script = ExtResource("9_d4eih")

[node name="StateWeaponAttack" type="Node" parent="States"]
script = ExtResource("8_db66e")

[node name="AI_States" type="Node" parent="."]

[node name="Wandering" type="Node" parent="AI_States"]
script = ExtResource("12_dm4xn")
state_time_max = 3.0

[node name="Approach" type="Node" parent="AI_States"]
script = ExtResource("13_iwtvt")

[node name="Attacking" type="Node" parent="AI_States"]
script = ExtResource("14_8kb0d")
daring_to_attack_angle = 0

[node name="Events" type="Node" parent="."]

[node name="take_knockback" type="Node" parent="Events"]
script = ExtResource("12_i1y8r")

[node name="take_damage" type="Node" parent="Events"]
script = ExtResource("13_6wpwa")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[editable path="Weapons/enemy_bow_root"]
